--- a/bower.json
+++ b/bower.json
@@ -17,5 +17,8 @@
   "dependencies": {
     "bootstrap": "^3.3.6",
     "angular": "^1.5.7"
+  },
+  "devDependencies": {
+    "angular-mocks": "^1.5.7"
   }
 }
