--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,9 @@
   ],
   "dependencies": {
     "bootstrap": "^3.3.6",
-    "angular": "^1.5.7"
+    "angular": "^1.5.7",
+    "angular-route": "^1.5.7",
+    "angular-component-router": "^0.2.1"
   },
   "devDependencies": {
     "angular-mocks": "^1.5.7"
