--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,9 @@
     "bootstrap": "^3.3.6",
     "angular": "^1.5.7",
     "angular-route": "^1.5.7",
-    "angular-component-router": "^0.2.1"
+    "angular-component-router": "^0.2.1",
+    "angular-animate": "^1.5.7",
+    "animate.css": "^3.5.2"
   },
   "devDependencies": {
     "angular-mocks": "^1.5.7"
